# HelliWM

./: .gitignore  README.md  bar.h  config.h  configure.sh  helliwm.c  install.sh  meson.build  parser.awk  wmrc
src/: .shortcut  .wmrc  Generator.ex  Generator.py  bar.h  config.h  def.h  helliwm.c  meson.build  panels.h  parser.awk  processed_config.h  shortcut  shortcut.h  wmrc
